Add summary tags

--- a/htm5-example.html
+++ b/htm5-example.html
@@ -6,61 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div,
-        span {
+        * {
             border: 1px solid black;
         }
     </style>
 </head>
 
 <body>
-    <div>
-        <h1>This a header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quam ipsa dolor ullam, architecto
-            exercitationem
-            molestias doloremque. Nostrum praesentium dolorum optio suscipit iusto eligendi obcaecati explicabo dolorem
-            cumque numquam! Repellat.</p>
-    </div>
-    <div>
-        <span>
-            <h1>This is another header</h1>
-        </span>
-    </div>
-    <p><span>Lorem</span> ipsum <span>dolor</span> sit, <span>amet</span> consectetur adipisicing elit. Sunt impedit sit
-        iste consectetur consequatur
-        architecto aut dignissimos possimus quae laudantium officia magnam enim odio ipsam, nemo culpa soluta aperiam
-        repellat, necessitatibus quaerat! Modi, aliquid reprehenderit placeat temporibus quae quaerat ab consequuntur
-        totam beatae dolore esse non repellat nemo impedit aperiam qui praesentium officia tempora, ex repudiandae
-        excepturi? Quae, sequi nisi non nemo tempora minima explicabo quia at ullam ad excepturi id saepe. Tenetur
-        expedita ea enim, in ducimus illum aliquid magni porro eaque necessitatibus provident laudantium repellendus
-        unde hic vero molestiae est et excepturi libero impedit omnis animi. Expedita, architecto voluptatibus nesciunt
-        dolorum, molestiae accusantium numquam sunt odit at iusto magnam delectus impedit, officiis officia quam aut
-        omnis minima distinctio vel itaque nobis eaque neque. Deleniti cupiditate debitis, quam, cum, vero perferendis
-        fugiat minima dolor optio corporis odio officia quaerat voluptatibus ad inventore illo sint ex porro
-        consequuntur distinctio assumenda modi! Molestiae quod quas eius, necessitatibus labore temporibus facilis odio
-        corporis mollitia voluptatum deleniti pariatur saepe dolor tempore laborum beatae similique recusandae ex. Sit
-        nemo veritatis impedit ipsam id fugiat voluptates facere architecto odio possimus, reiciendis, doloremque
-        temporibus repudiandae minus? Voluptatum, ullam. Possimus doloribus ipsum veritatis tenetur facilis, illum
-        quibusdam quaerat eveniet voluptatem sequi nobis voluptates eum maiores cumque quam ad provident magni pariatur
-        aperiam perferendis tempora amet! Sequi quod vel dolores libero officia blanditiis veritatis voluptas assumenda
-        suscipit incidunt ullam quidem, maxime porro neque odit, praesentium, aperiam voluptatibus ducimus atque at?
-        Modi, corrupti dolore illum quos asperiores totam eos soluta harum est, quibusdam non! In veritatis magnam
-        excepturi.
-    </p>
-
-    <h1>Another another header</h1>
-    <h2>sub heading 1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis fugiat laborum doloribus molestiae asperiores,
-        aspernatur itaque ullam natus libero necessitatibus ipsum delectus qui voluptas minima id omnis voluptates,
-        voluptatibus eveniet!</p>
-    <h2>sub heading 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt hic qui reiciendis dolor minima animi vitae
-        deleniti repellendus ea quidem repudiandae harum in magnam, nobis doloribus fugit quam excepturi nisi!</p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illo esse dolorem, explicabo nulla eaque
-        cupiditate saepe. Distinctio, dolores atque magni eum provident minus laborum tempora nisi cumque nam
-        consequuntur?
-    </p>
+    <header>header</header>
+    <nav>nav</nav>
+    <section>section
+        <article>article 1</article>
+        <article>article 2</article>
+        <article>article 3</article>
+    </section>
+    <aside>aside</aside>
+    <footer>footer</footer>
 </body>
 
 </html>
