--- a/summary-text-tags.html
+++ b/summary-text-tags.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
+    <nav><a href="http://127.0.0.1:5500">Volver al índice de ficheros</a></nav>
     <p><strong>Este párrafo está en negrita</strong></p>
     <p><em>Este párrafo está en cursiva</em></p>
     <p><mark>Este párrafo está en marcado en fosforito</mark></p>
     <p>Mi nombre no es <s>Pavlo</s>, es <u>Pablo</u></p>
-    <p>En mi libro <cite>Quita que tú no sabes</cite>, hablo de la importancia dle trabajo en equipo</p>
+    <p>En mi libro <cite>Quita que tú no sabes</cite>, hablo de la importancia del trabajo en equipo</p>
 </body>
 
 </html>
