--- a/summary-tags.html
+++ b/summary-tags.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <nav><a href="http://127.0.0.1:5500">Volver al índice de ficheros</a></nav>
     <div>Este contenido es de tipo bloque</div>
     <div>
         <a href="/htm5-example.html">Este es un enlace al contenido de HTML5</a>
